# license-plate-ocr-server-client-development

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/licenseplate_ocr/configs/: ocr.yaml  server.yaml
src/licenseplate_ocr/ocr_engine/: ocr_recognizer.py  super_resolution.py  yolox_predictor.py
src/licenseplate_ocr/ocr_engine/exps/default/: yolov3.py  yolox_l.py  yolox_m.py  yolox_nano.py  yolox_s.py  yolox_tiny.py  yolox_x.py
src/licenseplate_ocr/ocr_engine/exps/example/yolox_voc/: yolox_voc_s.py
src/licenseplate_ocr/ocr_engine/yolox/data/: data_augment.py
src/licenseplate_ocr/ocr_engine/yolox/data/datasets/: mosaicdetection.py  voc.py  voc_classes.py
src/licenseplate_ocr/ocr_engine/yolox/evaluators/: coco_evaluator.py  voc_evaluator.py
src/licenseplate_ocr/ocr_engine/yolox/exp/: base_exp.py  build.py  yolox_base.py
src/licenseplate_ocr/ocr_engine/yolox/models/: yolo_head.py
src/licenseplate_ocr/ocr_engine/yolox/utils/: put_license_text.py  visualize.py
src/licenseplate_ocr/ocr_server/: __init__.py  app.py
src/licenseplate_ocr/ocr_server/api/: __init__.py  download_image.py  general.py  upload_image.py
src/licenseplate_ocr/ocr_server/templates/: index.html  layout.html
src/licenseplate_ocr/utils/: config.py  cvImgToBase64.py  logger.py
